- Changed table with users, added extra column - Added search ability

--- a/share-login-switcher/src/main/amp/config/alfresco/web-extension/site-webscripts/com/switcher/admin-console/login/login.get_en.properties
+++ b/share-login-switcher/src/main/amp/config/alfresco/web-extension/site-webscripts/com/switcher/admin-console/login/login.get_en.properties
@@ -4,4 +4,12 @@ node.root=Category Root
 title.login-manager=Login Manager
 tool.login.label=Login Manager
 
+label.title-search=Search user
+
+message.empty=Search to view users.
+message.error=An error occurred during the search - no results to display.
+message.noresults=No results.
+
+button.search-all=Show all users
+
 button.switch-user=Switch user
